--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,17 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_jeu">Jeu</string>
     <string name="title_activity_test">test</string>
+    <string name="title_activity_ranking">Ranking</string>
+
+    <string name="rank1Name">rank1Name</string>
+    <string name="rank1Score">0</string>
+    <string name="rank2Name">rank2Name</string>
+    <string name="rank2Score">0</string>
+    <string name="rank3Name">rank3Name</string>
+    <string name="rank3Score">0</string>
+    <string name="rank4Name">rank4Name</string>
+    <string name="rank4Score">0</string>
+    <string name="rank5Name">rank5Name</string>
+    <string name="rank5Score">0</string>
 
 </resources>
